Bug 40173 - Empty Dialog library not saved: old contents saved instead.
Summary: Empty Dialog library not saved: old contents saved instead.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
3.4 Daily
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-17 09:37 UTC by Lionel Elie Mamane
Modified: 2011-08-17 10:24 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lionel Elie Mamane 2011-08-17 09:37:12 UTC
Reproduced on master, too.

Open an odb file that contains one or more dialogs in the "Standard" library. Delete all the dialogs. Save. Close file, open file again. All the dialogs are back in the library.

If one deletes one among several dialogs (or more generally n among m with n<m), it works well, the dialog is gone after a save / close / open cycle.

Also if one deletes all dialogs but creates a new dialog, then it works well: only the new dialog is in the library after a save / close / open cycle.
Comment 1 Lionel Elie Mamane 2011-08-17 10:24:52 UTC
Fixed in master; commit caee685234e87a4509c9aec4f04813714bfaf93d