fdo#40173 write out *newly* empty library